@@ -8,6 +8,7 @@ EXTRA_DIST = \
   .cvsignore \
   Quote_example.pl \
   finance-quote-helper.in \
+  gnc-prices \
   value_portfolio
 
 ## We borrow guile's convention and use @-...-@ as the substitution
